# ignite

./: CMakeLists.txt  README.md
ignite/: CMakeLists.txt
ignite/include/: iconfig.h  iobject.h  itype.h
src/: dummy.c
